// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App Snapshot renders 1`] = `
<div>
  <h1>
    My Counter
  </h1>
  <p>
    0
  </p>
  <button
    onClick={[Function]}
    type="button"
  >
    Increment
  </button>
  <button
    onClick={[Function]}
    type="button"
  >
    Decrement
  </button>
</div>
`;

exports[`Counter Snapshot renders 1`] = `
<p>
  1
</p>
`;

exports[`Storyshots Checkbox with checked 1`] = `
<label>
  My Checkbox Label
  :
  <input
    checked={true}
    onChange={[Function]}
    type="checkbox"
  />
</label>
`;

exports[`Storyshots Checkbox with unchecked 1`] = `
<label>
  My Checkbox Label
  :
  <input
    checked={false}
    onChange={[Function]}
    type="checkbox"
  />
</label>
`;
